--- a/index.HTML
+++ b/index.HTML
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Привет мир, меня зовут Саша</H1>    
+    <H1>Привет мир, меня зовут Саша</H1>
+    <p>Я люблю людей</p>    
 </body>
 </html>
